--- a/web/package.json
+++ b/web/package.json
@@ -11,9 +11,15 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@truffle/hdwallet-provider": "1.2.4",
+    "@types/ethereum-protocol": "^1.0.1",
+    "@types/web3": "^1.2.2",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "truffle": "5.2.5",
+    "web3": "1.3.4",
+    "web3-provider": "1.0.0"
   },
   "devDependencies": {}
 }
