--- a/web/package.json
+++ b/web/package.json
@@ -11,11 +11,13 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/dotenv": "1.4.1",
     "@truffle/hdwallet-provider": "1.2.4",
     "@types/ethereum-protocol": "^1.0.1",
     "@types/web3": "^1.2.2",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0",
+    "dotenv": "8.2.0",
     "nuxt": "^2.0.0",
     "truffle": "5.2.5",
     "web3": "1.3.4",
