--- a/web/package.json
+++ b/web/package.json
@@ -17,10 +17,12 @@
     "@truffle/hdwallet-provider": "1.2.4",
     "@types/ethereum-protocol": "^1.0.1",
     "@types/web3": "^1.2.2",
+    "@vue/composition-api": "1.0.0-rc.5",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0",
     "dotenv": "8.2.0",
     "nuxt": "^2.0.0",
+    "nuxt-svg-loader": "1.2.0",
     "truffle": "5.2.5",
     "web3": "1.3.4",
     "web3-provider": "1.0.0"
